--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -4,6 +4,11 @@ tasks:
     - command: |
         pip install pytest-playwright
         playwright install
+
+vscode:
+  extensions:
+    - "ms-python.python"
+
 ports:
   - port: 5900
     onOpen: ignore
